# cmd/swag/docs/swagger.yaml
@@ -85,6 +85,32 @@ definitions:
       message:
         type: string
     type: object
+  transportationqueryresponse.GetListTripsResponse:
+    properties:
+      page:
+        type: integer
+      total:
+        type: integer
+      trips:
+        items:
+          $ref: '#/definitions/transportationqueryresponse.Trip'
+        type: array
+    type: object
+  transportationqueryresponse.Trip:
+    properties:
+      arrival_date:
+        type: string
+      departure_date:
+        type: string
+      from_location:
+        type: string
+      id:
+        type: integer
+      price:
+        type: number
+      to_location:
+        type: string
+    type: object
 host: localhost:8002
 info:
   contact:
@@ -177,6 +203,62 @@ paths:
       summary: Verify OTP
       tags:
       - auth management
+  /transportation/search-trips:
+    get:
+      consumes:
+      - application/json
+      description: Get list trips
+      parameters:
+      - description: Departure date
+        in: query
+        name: departure_date
+        required: true
+        type: string
+      - description: From location
+        in: query
+        name: from_location
+        required: true
+        type: string
+      - description: To location
+        in: query
+        name: to_location
+        required: true
+        type: string
+      - description: Page number (default 1)
+        in: query
+        name: page
+        type: integer
+      - description: Page size (default 10)
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.ResponseData'
+            - properties:
+                data:
+                  $ref: '#/definitions/transportationqueryresponse.GetListTripsResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Get list trips
+      tags:
+      - Transportation
   /user/{id}:
     get:
       consumes:
